[tool.poetry]
name = "distance"
version = "0.1.0"
description = "Distance between a point and a curve"
authors = ["Rodrigo Crispim <crispim1411@gmail.com>"]
license = ""

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.1"
scipy = "^1.4.1"
matplotlib = "^3.1.2"
sphinx = "^2.3.1"
sympy = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
